--- a/app/src/main/res/menu/menu_bottom.xml
+++ b/app/src/main/res/menu/menu_bottom.xml
@@ -5,20 +5,20 @@
         android:id="@+id/menu_beasiswa"
         android:title="Beasiswa"
         app:showAsAction="ifRoom"
-        android:icon="@drawable/ic_school_black_24dp"
+        android:icon="@drawable/cute_coollege"
         />
 
     <item
         android:id="@+id/menu_lomba"
         android:title="Lomba"
         app:showAsAction="ifRoom"
-        android:icon="@drawable/trophy"
+        android:icon="@drawable/cute_trophy"
         />
 
     <item
         android:id="@+id/menu_artikel"
         android:title="Artikel"
         app:showAsAction="ifRoom"
-        android:icon="@drawable/ic_subject_black_24dp"
+        android:icon="@drawable/cute_literature"
         />
 </menu>
