--- a/app/src/main/res/menu/menu_search.xml
+++ b/app/src/main/res/menu/menu_search.xml
@@ -9,4 +9,9 @@
     android:icon="@android:drawable/ic_menu_search"
     app:showAsAction="collapseActionView|ifRoom"
     app:actionViewClass="androidx.appcompat.widget.SearchView"/>
+
+  <item android:id="@+id/contact_us"
+    android:title="Hubungi Kami"
+    android:icon="@android:drawable/ic_menu_search"
+    app:showAsAction="never"/>
 </menu>
