--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
 
   <color name="colorPrimary">#e65100</color>
   <!--<color name="colorPrimaryDark">#ac1900</color>-->
-  <color name="colorPrimaryDark">#333333</color>
+  <color name="colorPrimaryDark">#F57C00</color>
   <color name="colorPrimaryLight">#ff833a</color>
   <color name="colorAccent">#FF4081</color>
   <color name="colorAccentDark">#f50057</color>
