--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,6 +13,15 @@
     <item name="windowNoTitle">true</item>
   </style>
 
+  <style name="AppTheme.NoActionBarFinest" parent="Theme.AppCompat.Light.NoActionBar">
+    <item name="colorPrimary">@color/colorPrimary</item>
+    <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+    <item name="colorAccent">@color/finestWhite</item>
+    <item name="android:textColorPrimary">@color/finestWhite</item>
+    <item name="android:textColorSecondary">@color/finestWhite</item>
+    <item name="windowActionModeOverlay">true</item>
+  </style>
+
   <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar"/>
 
   <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light"/>
